--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         © Copyright <script>document.write(new Date().getFullYear())</script>, Made with&nbsp;
         <span class="text-gray">
            &#10084; 
-        </span>&nbsp;by&nbsp;<a href="https://github.com/0xelsherif" target="_blank">0xelsherif</a>.
+        </span>&nbsp;by&nbsp;<a href="https://github.com/0xelsherif" target="_blank">sakit</a>.
         <a href="https://twitter.com/0xelsherif" target="_blank"> Following on X</a> |
         <a href="https://github.com/0xelsherif/URL-QR-Code-Generator" target="_blank">Star me on GitHub Repo</a> |
         <a href="https://0xelsherif.medium.com/" target="_blank">See Medium Publication</a>.
